examples/istio-test.yaml
# Sample deployment for local utilization of cilium, and cert manager
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
          app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
#apiVersion: networking.istio.io/v1
#kind: Gateway
#metadata:
#  name: whoami-gateway
#spec:
#  selector:
#    istio: ingressgateway
#  servers:
#  - port:
#      number: 8080
#      name: http
#      protocol: HTTP
#    hosts:
#    - "*"
#---
#apiVersion: networking.istio.io/v1
#kind: VirtualService
#metadata:
#  name: whoami
#spec:
#  hosts:
#  - "*"
#  gateways:
#  - whoami-gateway
#  http:
#  - match:
#    - uri:
#      prefix: "/"
#    route:
#    - destination:
#        host: whoami
#        port:
#          number: 80
