examples/local-gateway-test.yaml
# Sample deployment for local utilization of cilium, and cert manager
apiVersion: v1
kind: Namespace
metadata:
  name: whoami-local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: whoami-local
spec:
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
          app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  namespace: whoami-local
spec:
  selector:
    app: whoami
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: whoami-local
  annotations:
    cert-manager.io/cluster-issuer: local-issuer
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: whoami.apicius.local
  listeners:
  - protocol: HTTP
    hostname: whoami.apicius.local
    port: 80
    name: http
  - protocol: HTTPS
    hostname: whoami.apicius.local
    port: 443
    name: https
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: secret-tls-whoami-local
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-route
  namespace: whoami-local
spec:
  parentRefs:
  - name: gateway
  hostnames:
    - whoami.apicius.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: whoami-service
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-redirect
  namespace: whoami-local
spec:
  parentRefs:
  - name: gateway
    sectionName: http
    namespace: whoami-local
  hostnames:
  - whoami.apicius.local
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
