examples/public-gateway-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-public
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: nginx-public
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-public
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
  namespace: nginx-public
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: fake.public.domain
  listeners:
  - protocol: HTTP
    hostname: fake.public.domain
    port: 80
    name: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: nginx-public
spec:
  parentRefs:
  - name: http-gateway
    namespace: nginx-public
  hostnames:
  - "fake.public.domain"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-service
      port: 80
